newclay/test/Compiler/Propagation/Fail/RecursiveGlobal2/main.clay
var x = foo();
foo() : Int = y;
var y = x;

main() = x;
